# VoiceCore

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  engines.yaml  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: exceptions.py
app/api/: config.py  deps.py  engine_config.py  lifespan.py  main.py  registry.py
app/api/middleware/: __init__.py  cors.py  error_handler.py  logging.py
app/api/routers/: __init__.py  health.py  stt.py  tts.py
app/engines/: base.py
app/engines/stt/qwen3asr/: __init__.py  config.py  engine.py
app/engines/stt/whisper/: config.py  engine.py
app/engines/tts/voxcpm/: __init__.py  config.py  engine.py
app/models/: engine.py  metrics.py
app/types/: audio.py
app/utils/: audio.py  exceptions.py
docker/: Dockerfile.template  Dockerfile.whisper-gpu
docs/: api.md  configuration.md  custom-engines.md  deployment.md
tests/: manual_voxcpm.py
tests/integration/: conftest.py  test_api_flow.py  test_lifespan.py
tests/unit/: test_exceptions.py
tests/unit/api/: __init__.py  conftest.py  test_config.py  test_deps.py  test_engine_config.py  test_health_router.py  test_middleware.py  test_registry.py  test_stt_router.py  test_tts_router.py  test_tts_router_extra.py  test_tts_router_more.py
tests/unit/engines/: test_base.py
tests/unit/engines/stt/qwen3asr/: test_qwen3asr_engine.py
tests/unit/engines/stt/whisper/: test_whisper_engine.py
tests/unit/engines/tts/voxcpm/: __init__.py  test_voxcpm_engine.py  test_voxcpm_engine_cleanup.py  test_voxcpm_engine_errors.py  test_voxcpm_engine_streaming.py
tests/unit/models/: test_engine.py  test_metrics.py
tests/unit/types/: test_audio.py
tests/unit/utils/: test_audio.py  test_exceptions.py
