[project]
name = "voice-core"
version = "0.1.0"
description = "Voice Core Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "numpy<2",
    "pydantic>=2.12.5",
    "soundfile>=0.13.1",
    # FastAPI stack
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "sse-starlette>=2.2.1",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
]

[tool.ruff]
line-length = 88
target-version = "py312"

# Enable specific rule sets
lint.select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules
lint.ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults (common in FastAPI)
    "TC001",  # Move imports into TYPE_CHECKING block (unnecessary for runtime usage)
]

# Exclude patterns
extend-exclude = [
    "__pycache__",
    ".venv",
    ".pytest_cache",
    "*.egg-info",
    "htmlcov",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Allow assert in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
dev = [
    "faster-whisper>=1.2.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    # API testing
    "httpx>=0.28.1",
]
